# clinicadl

./: .git-blame-ignore-rev  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG  CHANGELOG.md  CITATION.cff  Jenkinsfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  __init__.py  emissions.tsv  environment.yml  mkdocs.yml  myfile.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_3DCNN.py  run_test_2d_png.py  run_train_2D_png.py  setup.py  test.json
.github/workflows/: lint.yaml  publish.yaml  test.yml  test_cli.yml  test_generate.yml  test_interpret.yml  test_predict.yml  test_prepare_data.yml  test_quality_checks.yml  test_random_search.yml  test_resume.yml  test_train.yml  test_transfer_learning.yml  test_tsvtools.yml
.jenkins/: Jenkinsfile
.jenkins/scripts/: find_env.sh  generate_wheels.sh
Code/2D_png/: adni_png_train.py
Code/clinicadl/: setup.py
Code/image_preprocessing/: Run_experiments.ipynb  T1_postprocessing.py  T1_postprocessing_extract_hippo.py  T1_postprocessing_extract_hippo_utils.py  T1_postprocessing_mean_img_population.py  T1_postprocessing_utils.py  T1_preprocessing.py  T1_preprocessing_utils.py  crash-20190130-164607-junhao.wen-get_subject_session_list-e0c89ec6-2c97-49b0-b6ea-152c16ad2ef7.pklz  crash-20190201-184424-junhao.wen-mean_population-c661e1a0-f17b-432a-bfee-50c225fd9d96.pklz  crash-20190201-184624-junhao.wen-mean_population-da14733c-4ceb-4279-ba25-b0f1ba2b64a1.pklz  crash-20190201-184754-junhao.wen-mean_population-93256483-d870-4983-b0f0-cb9d026dea64.pklz  mean_population.nii.gz.REMOVED.git-id  quality_check_dl.py  quality_check_dl_utils.py  quality_check_image_similarity.py  quality_check_image_substract.py  run_postprocessing.py  run_postprocessing.sh  run_postprocessing_adni.py  run_postprocessing_adni.sh  run_postprocessing_aibl.py  run_postprocessing_aibl.sh  run_postprocessing_hippo.py  run_postprocessing_hippo.sh  run_postprocessing_hippo_adni.sh  run_postprocessing_mean_image_population.py  run_postprocessing_mean_population.sh  run_postprocessing_oasis.py  run_postprocessing_oasis.sh  run_preprocessing.py  run_qc.py  run_qc_dl_AIBLE.sh
Code/pytorch/: utils.py
Code/subject_selection/: adapting_split_to_new_CAPS.py  data_formatting.py  data_split.py  demographics_analysis.py  test.py  utils.py
Code/three_d_cnn/: ConfusionMatrix.py  three_d_cnn.py  three_d_cnn_utils.py
Code/two_d_cnn/: adni_png_eval.py  adni_png_input.py  adni_png_main.py  adni_png_multi_gpu_train.py  adni_slice_lenet_old.py  adni_slice_lenet_slice_mixed.py  classification_utils.py
Papers/: readme.txt
Results/: README.md  readme.txt
Results/trainlog/: checkpoint  graph.pbtxt  model.ckpt-4351.data-00000-of-00002  model.ckpt-4351.index  model.ckpt-4370.data-00000-of-00002  model.ckpt-4370.index  model.ckpt-4389.data-00000-of-00002  model.ckpt-4389.index  model.ckpt-4408.data-00000-of-00002  model.ckpt-4408.index  model.ckpt-4427.data-00000-of-00002  model.ckpt-4427.index
clinicaaddl/: Debug.ipynb  setup.py
clinicaaddl/clinicaaddl/: __init__.py  cli.py  main.py
clinicaaddl/scripts/: create_experiment-param.sh  create_experiment.sh  run_experiment.sh  test_experiments_set-Copy1.sh  (+1 more)
clinicadl/: API_test.py  API_test_v2.py  __init__.py  cmdline.py  config-7.toml  mlflow_test.py  pyproject.toml  setup.cfg  setup.py  test.py  test_debug.py  tmp_config.py  train_config.toml
clinicadl/losses/: enum.py  (+5 more)
docs/: Classify.md  Contribute.md  Extract.md  Generate.md  Installation.md  Interpret.md  Introduction.md  Predict.md  Preprocessing.md  QualityCheck.md  RandomSearch.md  Resume.md  Retrain.md  TSVTools.md  Tensors.md  index.md  requirements.txt
docs2/: README.md
run_classifications/: run_2DLenet_slices_mixed.py  run_2DLenet_slices_subject.py  run_2d_slice_mixed.sh  run_3d.sh
src/: __init__.py  cmdline.py
tests/: commandline.json  conftest.py  subjects_sessions_list.tsv  test_cli.py  test_extract.py  test_generate.py  test_interpret.py  test_meta_maps.py  test_predict.py  test_prepare_data.py  test_qc.py  test_random_search.py  test_resume.py  test_train_ae.py  test_train_cnn.py  test_train_from_json.py  test_transfer_learning.py  test_tsvtool.py  test_tsvtools.py  testing_tools.py
tsv_files/: ._ADNI_AD_vs_CN_T1.tsv  ._ADNI_CN_vs_AD_diagnosis_all_timepoint_diagnosis.tsv  ._ADNI_MCI_T1_rest.tsv  ._ADNI_sMCI_vs_pMCI4_stability-36_T1.tsv  ._CN_vs_AD.tsv  ._CN_vs_AD_diagnosis.tsv  ._image_preprocessing_test.csv  ._image_preprocessing_test.tsv  ._test.tsv  ADNI_AD_vs_CN_T1.tsv  ADNI_AD_vs_CN_T1_iteration-0_splits-5_valid_size-0.15_test.tsv  ADNI_AD_vs_CN_T1_iteration-0_splits-5_valid_size-0.15_train.tsv  ADNI_AD_vs_CN_T1_iteration-0_splits-5_valid_size-0.15_valid.tsv  ADNI_AD_vs_CN_T1_iteration-0_test.tsv  ADNI_AD_vs_CN_T1_iteration-0_train.tsv  ADNI_AD_vs_CN_T1_iteration-0_valid.tsv  ADNI_AD_vs_CN_T1_iteration-1_splits-5_valid_size-0.15_test.tsv  ADNI_AD_vs_CN_T1_iteration-1_splits-5_valid_size-0.15_train.tsv  ADNI_AD_vs_CN_T1_iteration-1_splits-5_valid_size-0.15_valid.tsv  ADNI_AD_vs_CN_T1_iteration-1_test.tsv  ADNI_AD_vs_CN_T1_iteration-1_train.tsv  ADNI_AD_vs_CN_T1_iteration-1_valid.tsv  ADNI_AD_vs_CN_T1_iteration-2_splits-5_valid_size-0.15_test.tsv  ADNI_AD_vs_CN_T1_iteration-2_splits-5_valid_size-0.15_train.tsv  ADNI_AD_vs_CN_T1_iteration-2_splits-5_valid_size-0.15_valid.tsv  ADNI_AD_vs_CN_T1_iteration-2_test.tsv  ADNI_AD_vs_CN_T1_iteration-2_train.tsv  ADNI_AD_vs_CN_T1_iteration-2_valid.tsv  ADNI_AD_vs_CN_T1_iteration-3_splits-5_valid_size-0.15_test.tsv  ADNI_AD_vs_CN_T1_iteration-3_splits-5_valid_size-0.15_train.tsv  ADNI_AD_vs_CN_T1_iteration-3_splits-5_valid_size-0.15_valid.tsv  ADNI_AD_vs_CN_T1_iteration-3_test.tsv  ADNI_AD_vs_CN_T1_iteration-3_train.tsv  ADNI_AD_vs_CN_T1_iteration-3_valid.tsv  ADNI_AD_vs_CN_T1_iteration-4_splits-5_valid_size-0.15_test.tsv  ADNI_AD_vs_CN_T1_iteration-4_splits-5_valid_size-0.15_train.tsv  ADNI_AD_vs_CN_T1_iteration-4_splits-5_valid_size-0.15_valid.tsv  ADNI_AD_vs_CN_T1_iteration-4_test.tsv  ADNI_AD_vs_CN_T1_iteration-4_train.tsv  ADNI_AD_vs_CN_T1_iteration-4_valid.tsv  (+30 more)
(+2292 files in other folders)
