[tool.poetry]
name = "clinicadl"
version = "1.4.0"
description = "Framework for the reproducible processing of neuroimaging data with deep learning methods"
license = "MIT"
authors = ["ARAMIS Lab"]
maintainers = ["Clinica developers <clinica-user@inria.fr>"]
readme = "README.md"
homepage = "https://clinicadl.readthedocs.io"
repository = "https://github.com/aramis-lab/clinicadl.git"
documentation =  "https://clinicadl.readthedocs.io"
keywords = [
    "bids",
    "image processing",
    "deep learning",
    "neuroimaging",
    "neuroscience"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
clinica = "^0.7.4"
torch = "^1.8.0"
torchvision = "*"
tensorboard = "*"
toml = "*"
pandas = "^1.2"
numpy = "^1.17"
scikit-learn = "^1.0"
scikit-image = "^0.19"
joblib = "^1.2.0"
click = "^8"
click-option-group = "^0.5"
pynvml = "*"
torchio = "^0.18.90"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pre-commit = "*"
pytest = "*"
pytest-timeout = "*"
pytest-xdist = "*"
pytest-cov = "^3.0.0"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.1"
mkdocs-material = "*"
pymdown-extensions = "*"

[tool.poetry.scripts]
clinicadl = "clinicadl.cmdline:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
force-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | _build
  | buck-out
  | build
  | dist
  | docs
  | README.md
  | MANIFEST.in
  | LICENSE.txt
  | clinicadl/VERSION
)/
'''
exclude = '''
/(
    README.md
  | MANIFEST.in
  | LICENSE.txt
  | clinicadl/VERSION
)/
'''

[tool.isort]
profile = "black"
